--- a/api-2.0/package.json
+++ b/api-2.0/package.json
@@ -11,20 +11,22 @@
   "license": "ISC",
   "dependencies": {
     "binary-extensions": "^2.2.0",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "ejs": "^2.6.1",
+    "encoding": "^0.1.13",
+    "express": "^4.18.2",
     "express-bearer-token": "^2.4.0",
     "express-jwt": "^5.3.0",
-    "fabric-ca-client": "^2.1.0",
-    "fabric-client": "^1.4.8",
-    "fabric-common": "2.2.3",
-    "fabric-network": "^2.1.0",
+    "fabric-ca-client": "^2.2.18",
+    "fabric-client": "^1.4.20",
+    "fabric-common": "^2.2.18",
+    "fabric-network": "^2.2.18",
     "http": "0.0.1-security",
     "http2": "^3.3.7",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
-    "log4js": "^6.2.0",
+    "log4js": "^6.9.1",
     "npm": "^6.14.6",
     "save": "^2.4.0"
   }
